# path_optimizer_ilqr

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: rvizConfig.rviz
launch/: demo.launch
log/: frenet_ilqr_test_demo.INFO  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230828-214549.26123  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230830-004047.31464  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230830-004101.31849  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230901-000635.5689  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230901-001130.9805  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230901-001406.12923  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230901-001812.17208  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230901-002956.27961  frenet_ilqr_test_demo.ljn-G7-7588.ljn.log.INFO.20230901-003504.1195
src/path/: data_structure.cpp  data_structure.h  free_space.cpp  free_space.h  gflags.cpp  gflags.h  path_costs.h  path_problem_manager.cpp  path_problem_manager.h  reference_line.cpp  reference_line.h  spline.cpp  spline.h  tool.cpp  tool.h
src/solver/: problem_manager.cpp  problem_manager.h  solver.cpp  solver.h  variable.h
src/test/: Map.cpp  Map.hpp  demo.cpp  reference_line_processor.cpp  reference_line_processor.h
